fix window integration test